--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validation": "^4.1.1",
+    "express-validator": "^7.2.0",
     "pg": "^8.13.0"
   }
 }
