--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
 dist
 dist-ssr
 *.local
@@ -22,6 +25,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.pem
 
-.env*
+# Build
+dist
+build
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 populatedb.js
